# cg

examples/: CMakeLists.txt
examples/delaunay_triangulation/: CMakeLists.txt  delaunay_triangulation.cpp
examples/diameter/: CMakeLists.txt  diameter.cpp
examples/shortest_path/: CMakeLists.txt  minkowski_sum.cpp  minkowski_sum.h  shortest_path.cpp  visibility_graph.cpp
examples/simplify/: CMakeLists.txt  simplify.cpp
include/cg/convex_hull/: graham.h  graham_andrew.h  quick_hull.h
include/cg/operations/: orientation.h
include/cg/primitives/: circle.h
include/cg/scalar_product/: diameter.h  shortest_path.h  simplify.h  visibility_graph.h
include/cg/triangulation/: cell_structure.h  predicates.h  triangulation.h
include/cg/visualization/: draw_util.h
src/visualization/: draw_util.cpp
tests/: CMakeLists.txt  convex_hull.cpp  diameter.cpp  simplify.cpp  triangulation.cpp
